@@ -12,6 +12,7 @@
 * Fix for class cast error due to annotated point value classes in cache
 * Change JavaScript wrappers to supply null if there is no value, instead of default values false, 0, "" and null on times is no value, like p.past(MINUTE).firstTime could now be null where previously -1
 * Give "add data source" button a tabindex, click it on enter or spacebar when selected
+* Fix for ValueChangeCounter discrete statistic to not assume a value at exactly the period start as a change within the period
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
